(library
 (name tools)
 (modules tools)
 (libraries data_common unix stdlib-shims str parmap docker-api))

(executable
 (name manager)
 (modules manager)
 (libraries data_common unix stdlib-shims str parmap docker-api db_lwt)
 (preprocess (pps lwt_ppx)))

(executable ; executable for tests
 (name main)
 (modules main)
 (libraries tools))

(executable
 (name docker_comm)
 (modules docker_comm)
 (libraries docker-api dockerfile-cmd dockerfile dockerfile-opam unix))
