(library
 (name misc_js)
 (modules misc_js)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries js_of_ocaml))

(library
 (name ui_lib)
 (wrapped false)
 (modules common v request route)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries data_common misc_js api_services ez_api.session_client vue-jsoo))

(executable
 (name main_ui)
 (modules main_ui)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries ui_lib)
 (modes js)
 (js_of_ocaml
  (flags (:standard --no-sourcemap))))

(executable
 (name testing_reqs)
 (modules testing_reqs)
 (libraries ez_api ez_api.req ez_api.req_lwt ez_api.request ez_api.session_client 
            data_common api_services safepass ez_api.icohttp ez_api.icohttp_lwt
            ez_api.server ez_api.server_session)
(preprocess (pps lwt_ppx))
)